tests/enum_member_unknown_bad.stderr
tests/enum_member_unknown_bad.sl:73:77: error: unknown symbol
