tests/enum_member_unknown_bad.sl
enum Mode i32 {
    A = 0
}

fn is_mode_b(m Mode) bool {
    return m == Mode.B
}
